edits and responses to DBS comments

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -31,7 +31,7 @@
 
 \doublespacing 
 
-\title{\large Estimating interaction matrices for horizontal networks using performance data in diverse systems}
+\title{\large Estimating interaction strengths for diverse horizontal systems using performance data}
 
 
 
@@ -62,10 +62,10 @@
 
 
 \noindent
-Number of words - Abstract: 192\\
-Number of words - main text: 5570\\
+Number of words - Abstract: 225\\
+Number of words - main text: X\\
 3 Figures in main text.\\
-Number of references: 85\\
+Number of references: X\\
 
 \noindent
 \textbf{Keywords:} Annual plants, competition, facilitation, interaction strength, network, non-trophic, population dynamics, species interactions.  
@@ -92,7 +92,7 @@ Data will be submitted to Dryad upon publication. Code is available in the Githu
     \item{\textbf{We show how to link the parameters inferred by our framework to a population dynamics model to make inferences about the effect of interactions on community dynamics and diversity.}}
     \item{The advantages of these features are illustrated with a case study on an annual wildflower community of 22 focal and 52 neighbouring species, and a discussion of potential applications of this framework extending well beyond plant community ecology.}
 \end{enumerate}
-% Abstract = 217 words
+% Abstract = 225 words
 % 350 word limit for MEE
 
 \begin{refsection}
@@ -103,18 +103,13 @@ Data will be submitted to Dryad upon publication. Code is available in the Githu
     \paragraph{}
     In many biological systems, interactions between system elements (be these species, individuals, etc.) affect population-level performance and together determine the dynamics of the whole system. To understand system dynamics when multiple system elements are involved, complex systems can be represented as networks where the elements are nodes and linked by interactions \parencite{Pimm1978}. These nodes can take on a wide array of identities, including cells, individuals, populations or species. Likewise, interactions or links can operate via many different mechanisms and have a wide range of effects on the nodes. \textbf{Network theory has been widely applied to investigate different biological systems. It has been particularly effective at informing us of the underlying biological processes structuring diverse multi-trophic communities \parencite{Dunne2002, Thompson2012} through the study of vertical interactions in food webs, plant-pollinator and host-parasite systems \parencite{Lafferty2008, Stouffer2014, Cirtwill2015a}.}
 
-    %\paragraph{}
-    %Network theory has been widely applied to investigate the structure of biological systems such as food webs and other types of multi-level ecological interaction networks. Because network theory can be used to characterise diversity, stability and other community-level properties emerging from species interactions, it has had a long and meaningful impact on our understanding of ecological communities. There is now a rich body of work describing the structural properties of food webs, plant-pollinator networks, and host-parasite interactions (e.g.\ \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}). Horizontal networks, however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been more neglected by network ecology \parencite{Ellison2019}. These species and their interactions have been found to alter the structure, stability and diversity-functioning relationships of the whole multi-level system \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}, which makes integrating horizontal and vertical networks a key challenge in improving our understandingof system dynamics and persistence \parencite{Godoy2018c}.
-
     % DBS: I might be being dense, but I don't see where Ellison 2019 says anything about "horizontal networks".
+    % MDB: "These non-trophic interactions usually are neglected in ecological networks unless they are lumped within compartments representing other primary producers or basal resources" - should I remove?
     \paragraph{} 
     \textbf{Horizontal networks, however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been more neglected by network ecology \parencite{Ellison2019}}. In such systems, interactions between species are not always easy to directly observe empirically and must instead be deduced through other means. A common approach in population ecology is to directly quantify the effects of interactions on a species of interest by evaluating performance in the absence and presence of potential interaction partners at fixed or varying densities \parencite{Connell1961, Grace1990}. `Performance' here refers to any variable that affects the dynamics of the system, for example quantity of resources gathered, biomass accumulation, or population growth rate. \textbf{Measuring species interactions as effects on performance allows us to infer future population trajectories through their connection to population dynamics models, and thus helps draw direct conclusions about the effects of interactions on emergent diversity patterns \parencite{Laska1998}.} The resulting interactions are phenomenological and thus not dependent on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of species $S$ increases and the number of potential direct interactions subsequently increases as $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different species is typically skewed, with a few species making up the majority of abundances and a large number of elements remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer species may not be observed simply by chance. We thus run the risk of excluding them from analyses regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method that is flexible to both a high number of species, and potential gaps in our records of interactions. 
 
-    \paragraph{} % PARAGRAPH TO BETTER MOTIVATE
+    \paragraph{}
     \textbf{Various methods have been developed to circumvent these issues. A common strategy is to reduce the number of parameters to be estimated by assuming most interactions are weak enough to be negligible, and thus priority is given to inferrence of only the strongest interactions \parencite{Weiss-Lehman2022}. Other approaches include averaging interactions across species by aggregating species together in groups, for example based on their origin and life form \parencite{Martyn2021}, by their taxonomy and traits \parencite{Uriarte2004}, or lumping all heterospecific species together \parencite{Chu2015}. Here we present a alternative approach designed to make the most of available data without requiring such strong a priori hypotheses. Specifically, we develop a joint model that allows us to estimate both identifiable and unidentifiable pairwise interactions from measures of performance in the absence and presence of different interaction partners.}
-    %  Alternatively, interactions are not identified and models instead rely on estimating spatial associations between species, which include the effects of interactions.S
-
-    % DBS: Chu2015 above is: https://doi.org/10.1890/14-1741.1
 
     \paragraph{} 
     We present a general framework to estimate interactions in diverse horizontal systems. We implement the model in STAN \parencite{Carpenter2017}, a Bayesian statistical language, and apply it to an ecological case study of an annual wildflower community in Western Australia. Using this dataset, we estimate positive and negative interactions between 22 focal species and 52 neighbouring species and illustrate a range of uses for this approach through ecologically-relevant findings. \textbf{We further describe how to couch the returned interaction estimates into established models of population dynamics, thus allowing inferences to be drawn between the structure and nature of the interaction matrix and patterns of community abundances and biodiversity. This framework presents a new and exciting way to make use of data that would otherwise be too incomplete to uniquely infer all pairwise interactions. We also provide  pre-written model code in R and STAN which requires little to no modification for immediate application to a wide variety of datasets of species performance.}
@@ -125,17 +120,14 @@ Data will be submitted to Dryad upon publication. Code is available in the Githu
 \paragraph{} 
 We developed a joint modelling framework to estimate pairwise interactions which benefits from several distinguishing features including the ability to estimate both \textit{identifiable} interactions (direct estimates from the observed data) and \textit{unidentifiable} interactions (when observations are missing or too few). After describing the required data (\ref{meth:data}), we show how one can estimate identifiable interactions with a unique interaction parameter as described in the neighbour-density dependent model (\ref{meth:nddm}). We then define and select which interactions are identifiable and which are not (\ref{meth:id_params}) based on data availability. Independent from the first model, we also describe a response--impact model (\ref{meth:rim}) where species have a singular effect on neighbours and a singular response. This allows us to estimate unidentifiable interactions as the product of element-specific response and impact parameters. Both models contribute to the overall joint model likelihood as detailed in \ref{meth:addlog}. Together, identifiable and unidentifiable interaction estimates can then populate community interaction matrices that describe the effects of all interaction partners on the performance of all focal species. 
 
-%, i.e. when elements are observed to co-occur enough times and at varying densities such that the effect of one element on the performance of the other can be reliably estimated via regression. Conversely, the interaction effect of element $j$ on element $i$ is is deemed unidentifiable when there are none or too few measures of the performance of $i$ in the presence of varying densities of $j$. 
-
-
 
     \subsection{Data requirements}
     \label{meth:data}
 
-    % DBS: Why do we say "reciprocal" below?
+    % DBS: Why do we say "reciprocal" below? MDB: because we're looking at ij and ji
     \paragraph{}
     The joint model framework was initially developed for an ecological dataset where interacting elements (species) affect reciprocal species performance (lifetime reproductive success). Though we refer to system elements as species throughout this paper, this framework can be applied to data from any interacting group of elements (e.g.\ cells, individuals, populations, species) which meet the following criteria. First, observations must include some proxy for performance, such as growth (e.g.\ biomass), fecundity (e.g.\ number of eggs laid) or chemical production (e.g.\ oxygen). Second, these observations must also record the identities and densities of elements which potentially interact with each focal element. Lastly, observations should be replicated for each focal element with the aim of capturing variation in the identities and densities of interaction partners. Though not strictly necessary, it is also beneficial to have observations of focal elements with no interaction partners to better estimate intrinsic performance. 
-    %\textbf{Changes: removed mention of 'interaction neighbourhood' and moved info about environment / interaction covariation to case study section. This is to generalise the method. [[DBS: I have a suspicion that we would need to change things if the observations are not per capita...]]}
+    %\textbf{Changes: removed mention of 'interaction neighbourhood' and moved info about environment / interaction covariation to case study section. This is to generalise the method. [[DBS: I have a suspicion that we would need to change things if the observations are not per capita...]]} MDB: Not sure what you mean here.
 
     \paragraph{}
     We define $s$ as the number of focal species $i$, $i \in \{ 1, .., s \}$, and $t$ as the number of interacting species $j$ across all $s$ focals, $j \in \{1, ..., t \}$. Typically, not all species in the system will be represented in the set of focals, such that $s \le t$. Measurements of the performance of individual units from each focal element (e.g.\ seed production of individual plants belonging to a set of focal species) are stored in a vector $p$ of length $n$ and indexed by $k$, with $k \in \{1, ..., n \}$. The densities of interaction partners are stored in a matrix $X$, of size $n \times t$. When an element $j$ was absent for a given observation $p_k$, then $X_{k,j} = 0$. Finally, the species identity of each of the $n$ focal individuals is stored in the vector $d$, of length $n$, and containing the index of the corresponding species: $d_k \in \{1, ..., s \}$.
@@ -168,7 +160,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
     \label{meth:rim}
 
     \paragraph{}
-    {\textbf{Having unidentifiable parameters creates multiple problems which we would like to overcome. For example, we might wish to make out-of-sample predictions about the consequences of interactions between two species $i$ and $j$ that were never observed to interact but could still potentially interact under some environmental conditions; without knowing the corresponding $\beta_{i,j}$ and $\beta_{j,i}$, this is impossible. When an interaction coefficient is unidentifiable because of insufficiently variable neighbour densities, we still want to be able to allow such neighbours to have non-negligible impacts on focal plants---as opposed to assuming $\beta_{i,j} = 0$ or dropping that density predictor altogether.}}
+    {\textbf{Having unidentifiable parameters creates multiple problems which we would like to overcome. For example, we might wish to make out-of-sample predictions about the consequences of interactions between two species $i$ and $j$ that were never observed to interact but could still potentially interact under some environmental conditions; without knowing the corresponding $\beta_{i,j}$ and $\beta_{j,i}$, this is impossible. When an interaction coefficient is unidentifiable because of insufficiently variable neighbour densities, we still want to allow such neighbours to have non-negligible impacts on focal plants---as opposed to assuming $\beta_{i,j} = 0$ or dropping that density predictor altogether.}}
     Approximating unidentifiable interaction parameters is a complex challenge with multiple potential solutions. Here, we address the issue by using a model which assumes that a species $i$ will typically have a singular impact ($e_i$) on and a singular response ($r_i$) to neighbours independent of neighbour identity (response and impact model, or RIM - see \cite{Godoy2014b}). A pairwise interaction parameter is therefore the product of a focal species $i$'s' response parameter and an interacting species $j$'s' impact parameter. The corresponding density-dependent model of performance then becomes:
         \begin{equation}
         f(p_{k}) = \gamma_{d_k} - r_{d_k} \sum_{j=1}^{t} e_{j} X_{d_k, j}
@@ -177,11 +169,6 @@ We developed a joint modelling framework to estimate pairwise interactions which
     To fit the RIM, the densities of species $j$ must be linearly independent to the densities of other species and/or combinations of species, across the entire $X$ matrix. This is in contrast to \ref{meth:nddm} above, where the densities of $j$ must be linearly independent within the subset of observations for each focal $i$. Importantly, this is a less strict condition for parameter identifiability. As a result, it is frequently possible to estimate pairwise interactions that would be unidentifiable given Eq.~\ref{nddm} by recognizing that pairwise density dependence in Eq.~\ref{rim} is given by $\beta_{i, j} = r_{i} \, e_{j}$.
 
     \textbf{Readers should note that the response--impact model makes different assumptions about the structure of interactions in nature. Specifically it supposes that species tend to have a generalisable effect on and response to neighbours regardless of neighbour identity. This stands in contrast to the NDDM, which assumes a unique parameter for every interaction thereby allowing for more idiosyncracies across species. Such simplification is useful from a statistical point of view in order to infer unidentifiable interactions, but its ecological significance should not be dismissed. Though there is evidence in support of this approach \parencite{Stouffer2022, Skwara2022}, care should always be taken to assess the different assumptions behind the estimation of identifiable and unidentifiable interactions and how well these may apply to any particular system of interest.}
-    % Last sentence moved from Discussion
-    % DBS: refs needed for what I've added above are:
-    % Stouffer2022: https://doi.org/10.1101/2021.11.10.467010
-    % Skwara2022: https://doi.org/10.1101/2022.05.12.491213
-
 
     \subsection{Joining the two models}
     \label{meth:addlog}
@@ -217,14 +204,14 @@ We developed a joint modelling framework to estimate pairwise interactions which
 
     \subsection{Making interaction parameters comparable across focal species} 
 
-        The $\beta_{i, j}$ estimates returned by the framework in the composite matrix $B$ describe the effect of species $j$ on the performance of species $i$. Differences in the magnitude of these interaction terms may thus reflect intrinsic differences in performance, which can vary in time, space and between species. Two species may for example have different baseline values of reproductive fitness. In order to make the effects of interactions comparable between species, the interaction terms returned by both models above can be transformed into scaled interaction strengths \parencite{Laska1998}. The appropriate scaling is determined by rewriting the neighbour density-dependent model (Eq. \ref{nddm}) into a form equivalent to a Lotka-Volterra competition model: 
+        The $B_{i, j}$ estimates returned by the framework in the composite matrix $B$ describe the effect of species $j$ on the performance of species $i$. Differences in the magnitude of these interaction terms may thus reflect intrinsic differences in performance, which can vary in time, space and between species. Two species may for example have different baseline values of reproductive fitness. In order to make the effects of interactions comparable between species, the interaction terms returned by both models above can be transformed into scaled interaction strengths \parencite{Laska1998}. The appropriate scaling is determined by rewriting the neighbour density-dependent model (Eq. \ref{nddm}) into a form equivalent to a Lotka-Volterra competition model: 
         \begin{equation}
         f(p_{k}) = \gamma_{d_k} \left ( 1 - \sum_{j=1}^{t} {\beta}''_{d_k, j} X_{d_k, j} \right )
         \label{LVform}
         \end{equation}
         This reveals that our interaction terms can be rescaled into interaction strengths by dividing them by the recipient element's intrinsic performance:  
         \begin{equation}
-        {\beta}''_{i, j} = \frac{\beta_{i, j}}{\gamma_{i}}
+        {\beta}''_{i, j} = \frac{B_{i, j}}{\gamma_{i}}
         \label{scaling}
         \end{equation}
         Though this scaling step is not strictly necessary, for ecological datasets these scaled interaction strengths have the benefit of being directly comparable both across species and across environmental contexts where reproductive fitness is likely to vary \parencite{Wootton2005}.
@@ -236,9 +223,6 @@ We developed a joint modelling framework to estimate pairwise interactions which
 
         \paragraph{}
         In both cases, an established population dynamic model is required as well as knowledge of crucial species-specific demographic rates. This step is illustrated for our case study in the Supplementary Methods \ref{SI:popdyn}, where we use annual plant population dynamic model to transform effects on wildflower seed production (proxy for performance) into effects on population growth, and includes species-specific estimates of seed germination and survival rates. 
-
-        % \paragraph{}
-        % Though this rescaling is not necessary when interactions are quantified as effects on rates such as growth or biomass accumulation, it is particularly useful in cases where $P_i$ is captured by variables which are affected by r/K reproductive strategies, such as seed or fruit production. Species $i$ for example may produce a high number of seeds of which few are viable, whereas species $j$ produces very few seeds though these are much more likely to mature into reproductive adults. Scaling the interaction terms returned by the models allows us to compare how species $i$ and $j$ both respond to interactions, relative to their performance. [MOVE TO DISCUSSIO?]
 
 
     \subsection{Model fitting}
@@ -279,22 +263,18 @@ We developed a joint modelling framework to estimate pairwise interactions which
     The model returned estimates for all 1144 interactions between 22 focal species and 52 interacting species, of which 56.7\% were identifiable and estimated by the NDDM. When accounting for interactions between focal species only, 82.0\% of interactions were identifiable. We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Figure \ref{fig:ppcheckmu2}). This is especially important for verifying that the appropriate distribution and link function are being used for the data at hand. The joint model also returns simulated performance data for the RIM only, which we also checked visually (Supplementary Results \ref{SI:results} Figure \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. Interaction estimates were scaled according to focal intrinsic fitness into interaction strengths comparable between focal species, and we sampled from each resulting interaction strength distribution to create 1000 samples of the scaled community interaction matrix.
 
     \paragraph{}
-    For our case study, the resulting scaled community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each scaled interaction across all samples. Overall, 53.3\% of focal species had a median interspecific interaction strength which was competitive, making competition the dominant interaction type. The median value of 46.7\% of focal $\times$ neighbour interactions, however, were facilitative, as were the medians of 43.2\% of all focal $\times$ focal interactions. As a result, 47.6\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates its own performance. For 11 of our 22 focal species, the scaled distributions of intraspecific effects did not overlap with 0, suggesting that individuals of those species have a non-trivial effect on other individuals of the same species.
-    % DBS: I think we need to add % median competitive and % median facilitative.
-    \textbf{This stands in contrast to interspecific interactions, for which only 19.4\% did not overlap with 0 when considering all neighbours. It is reasonable to assume that many of those interactions were poorly informed especially those with rarer neighbours (see Methods \ref{meth:sparse}). Indeed the proportion of interspecific interactions which do not overlap with 0 increased to 32\% when considering focal species only since these are the most common species.}
+    For our case study, the resulting scaled community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each scaled interaction across all samples. Overall, the median strength for 54.0\% of focal $\times$ neighbour interactions were competitive, making competition the dominant interaction type. The median of 46.0\% of focal $\times$ neighbour interactions, however, were facilitative, as were the medians of 44.1\% of all focal $\times$ focal interactions. As a result, the median of 48.5\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates its own performance. Median intraspecific interaction strength was competitive for 14 focal species (63.6\%), and facilitative for the remaining $8$ (36.4\%). For 11 of our 22 focal species, the scaled distributions of intraspecific effects did not overlap with 0, suggesting that individuals of those species have a non-trivial effect on other individuals of the same species. \textbf{This stands in contrast to interspecific interactions, for which only 19.4\% did not overlap with 0 when considering all neighbours. It is reasonable to assume that many of those interactions were poorly informed especially those with rarer neighbours (see Methods \ref{meth:sparse}). Indeed the proportion of interspecific interactions which do not overlap with 0 increased to 32\% when considering focal species only since these are the most common species.}
 
     \subsection{Examples of ecological applications}
 
     \paragraph{}
-    We illustrate a few potential applications of our framework by exploring questions of common ecological relevance with our case study. Each question below highlights some of the advantages of our resulting interaction network: intraspecific interactions, non-symmetrical interactions, and the ability to estimate positive and negative interactions. % We were unfortunately unable to compare our results to other methods for estimating such a diverse set of plant-plant interactions because there are currently none other that we are aware of that do this.
-
+    We illustrate a few potential applications of our framework by exploring questions of common ecological relevance with our case study. Each question below highlights some of the advantages of our resulting interaction network: intraspecific interactions, non-symmetrical interactions, and the ability to estimate positive and negative interactions. 
 
     \subsubsection*{Q1. Do abundant natives under-regulate their population density compared to rarer native species?}
     One hypothesis as to why certain plant species are more abundant than others is that they tend to compete with themselves less strongly than rare species \parencite{Yenni2012, Yenni2017}. Hypothetically, this release from intraspecific competition pressure allows them to reach much higher densities than species which strongly compete with themselves. In our case study, we explore this hypothesis by plotting the effect of a species on itself against its density as in Figure \ref{fig:species}.A. Intraspecific interactions are at their weakest when close to $0$. The two most abundant native species \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) highlighted in purple fall very close to the median intraspecific interaction strength. This suggests that \textit{V. rosea} and \textit{P. canescens} do not reach high densities through an under-regulation of their population density and are thus likely to be reaching these densities through other means such as access to a larger niche space. 
 
     \subsubsection*{Q2. Which species are keystones in this system?}
     Keystone species have disproportionately strong effects on other species in their system and the dynamics of the whole ecosystem, based on their abundances \parencite{Power1996, Piraino2002, Libralato2006}. As such their exclusion from a community is expected to create significant changes in species density and composition \parencite{Paine1969}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation (e.g.\ \cite{Paine1992}) \textbf{and the inclusion of multiple trophic levels}, we can identify potential candidates by comparing a species' impact on the population growth of other species to its own density \parencite{Libralato2006}. It is important to note that because our framework allows for asymmetrical interactions, we are able to differentiate a species' impact on other species from its response or sensitivity to neighbours \parencite{Broekman2020}. Figure \ref{fig:species}.B highlights two native species in green which may be potential keystone species due to having strongly competitive effects on the rest of the community overall, despite  low densities: \textit{Trachymene ornata} (TROR) and \textit{Gilberta tenuifolia} (GITE). 
-    
 
     \subsubsection*{Q3. Do all exotic species compete with native species?}
     Though invasive species are expected to compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017, Wainwright2019}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to the native species in a community. Figure \ref{fig:species}.C plots the sum of a species' competitive effects on neighbours against the sum of its facilitative effects on neighbours. Exotic species are identified in red. Out of these three exotic species, two have overall competitive effects on the community: \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). \textit{P. aroides} interacts weakly with neighbours, whether it is competing or facilitative, and \textit{A. calendula} does compete but still lies below the median sum of competitive effects for the community, its overall competitive effect being largely driven by weak facilitation. \textit{Hypochaeris glabra} (HYPO) on the other hand has strong effects on other species, both competitive and facilitative, and has an overall facilitative contribution to the community. These results suggest that here at least, the effects of exotic species on native species are complex and species-dependent.
@@ -321,7 +301,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
     Species interaction networks have a wide range of practical applications, such as evaluating ecosystem response to human-altered landscapes, guiding future management decisions \parencite{Ross2011} or exploring how communities may respond to global warming \parencite{Gorman2019}. Conservation and ecosystem management efforts aimed at regulating species abundances can, for example, use the information provided by an interaction network to prioritise which species to conserve or eradicate based on their role in the community \parencite{Cirtwill2018a}. Identifying keystone, foundation and other important types of species roles is also helpful for understanding biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \parencite{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019} \textbf{though often requires the inclusion of other trophic levels}. The examples we describe here are not exhaustive, but serve to illustrate how horizontal interaction networks, \textbf{especially when linked to population models,} can help us understand both community dynamics overall and the effects \& response of specific species towards the community. 
 
     \paragraph{}
-    Quantifying the community interaction matrix can also allow us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another.     Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \cite{Chu2015a}); weak interactions between species suggest that they are not sharing or competing for many resources, and thus may have large niche differences in the community. \textbf{Moreover, our inclusion of facilitative interactions, which have traditionally been disregarded in plant population models and mathematical frameworks of plant coexistence, provides a means to investigate the prevalence and strength of facilitation across multiple species and how it may act in relation to competition and species diversity.} Recent work suggests facilitation may be more widespread than traditionally thought \parencite{Gross2015, Picoche2020} and is likely to benefit species diversity and stability in some systems \parencite{Coyte2015, Brooker2008}.
+    Quantifying the community interaction matrix can also allow us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \cite{Chu2015a}); weak interactions between species suggest that they are not sharing or competing for many resources, and thus may have large niche differences in the community. \textbf{Moreover, our inclusion of facilitative interactions, which have traditionally been disregarded in plant population models and mathematical frameworks of plant coexistence, provides a means to investigate the prevalence and strength of facilitation across multiple species and how it may act in relation to competition and species diversity.} Recent work suggests facilitation may be more widespread than traditionally thought \parencite{Gross2015, Picoche2020} and is likely to benefit species diversity and stability in some systems \parencite{Coyte2015, Brooker2008}.
 
     \paragraph{}
     Ultimately, quantifying species interaction networks allows us to apply tools from network theory to help us understand how these interactions drive community-level patterns of density and diversity. Several metrics already exist for describing horizontal network structure such as weighted connectance \parencite{Ulanowicz1991} or relative intransitivity \parencite{Laird2006a}, though these are fewer than for trophic or unweighted networks (e.g.\ \cite{Bersier2002, Delmas2019}). Adapting measures of nestedness or modularity for example to non-sparse networks (as horizontal communities typically are) would allow us to further characterise how interactions and species are organised. These metrics relate to various aspects of stability and could greatly inform us on how diversity is maintained. Likewise, networks also provide several ways of measuring and describing species roles in their communities \parencite{Cirtwill2018a} for example through the use of structural motifs, unique patterns of interacting species which together make up the whole network. Motifs have been found to have important biological meaning in food webs \parencite{Bascompte2005a} but remain to be identified for horizontal networks. 
@@ -381,7 +361,6 @@ The authors declare no competing interests.
         \end{centering}
     \end{figure} 
 
-    %DBS: Why doesn't the shading for facilitation cover from 0 to the left-most limit of the x-axis? This seems like something I should have noticed before!
     \addtocounter{figure}{-1}
     \begin{figure} [t!]
         \caption{For all graphs, diamonds are species medians across all network samples, black lines cover the 50\% quantile and grey dots indicate the full range of values as calculated from 1000 sampled networks. The shaded part of the graphs show facilitative (negative) interactions. Dashed lines represent the median value for all focals. Coloured triangles indicate the species referred to in the main text for each of the ecological questions associated with (A), (B) and (C). \\
@@ -392,14 +371,6 @@ The authors declare no competing interests.
 
 \clearpage
 \newpage
-
-    % \begin{figure}[H]
-    %     \begin{centering}
-    %     \includegraphics[width=0.4\textwidth]{../../3.analyses/figures_mss/cooccur_vs_abund.png}
-    %     \caption{Absolute sum of focal species association strengths as returned by the cooccur package (x-axis), plotted against their log density (y-axis). Dashed lines are the median for all focals. In green are the same potential keystone species as identified in Fig. \ref{fig:species}.B: \textit{Trachymene ornata} (TROR) and \textit{Gilberta tenuifolia} (GITE). Because association strengths are derived from densities, rare species also tend to have weaker summed association strengths which makes identifying potential keystone species challenging.}
-    %     \label{fig:coocab}
-    %     \end{centering}
-    % \end{figure} 
 
 
 % END OF MAIN TEXT 
